styles.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');

body {
    margin: 0;
    font-size: 18px;
    font-family: 'Rubik', sans-serif;
    background-color: #202731;
    overflow-x: hidden;
    color: white;
}
a {
    color:rgb(96, 225, 96);
    text-decoration: dotted;
    font-weight: bold;
}

.navbar a {
    opacity: 0;
    color: white;
    text-decoration: none;
    font-weight: normal;
}

.brackets {
    color: #28cc40;
    font-weight: 400;
    opacity: 0;
}
h1:hover {
    cursor: pointer;
}
h1:hover .brackets {
    cursor: pointer;
    animation: appear .3s linear forwards;
}
.navbar {
    margin: 25px 10px;
    font-size: 30px;
    display: flex;
    justify-content: space-between;
}
/* .nav-element:hover {
    cursor: pointer;
}
.nav-element:hover .code-style{
    cursor: pointer;
    animation: appear .3s linear forwards;
} */

.code-style {
    opacity: 0;
    color: rgb(96, 225, 96);
    font-weight: 100;
}

.logo {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100vw;
    height: 80vh;

    animation: moveToTop 1s ease-in-out 4s forwards;
}
#svg23:hover {
    cursor: pointer;
}
#mask-line {
    stroke-dasharray: 2269;
    stroke-dashoffset: 2269;
    animation: strokeOffset 3.5s ease-in-out .5s forwards;
    /* animation: strokeOffset 2s ease-out .5s forwards; */
}
.main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin: 80px;
    /* max-width: 1000px; */
}
.animation-appear {
    opacity: 0;
    animation: appear 0.5s linear 5s forwards;
}
.quotes {
    font-weight: bold;
    color: #60e160;
}
.cards {
    display: flex;
    flex-wrap: wrap;
    justify-content:space-between;
}
.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color:#303130;
    border-radius: 8px;
    width: 200px;
    height: 250px;
    /* box-shadow: 0px 0px 8px 3px #3d3d3e; */
    margin: 8px;
    padding: 8px;
    /* padding: 80px 50px; */
    animation: notCardHover .1s linear forwards;
}
.card:hover {
    animation: cardHover .1s linear forwards;
}
.card-title, .card-footer {
    color: #60e160;
    font-weight:900;
}
.card-icons>* {
    margin: 0px 8px;
}
.gitchart img{
    max-width: 100%;
}
@keyframes strokeOffset {
    from {
        stroke-dashoffset: -2269;
    }
    to {
        stroke-dashoffset: 0;
    }
  }

@keyframes moveToTop {
    to {
        transform: translateY(-54%)
        scale(0.1,0.1);
        fill: #202731;
    }
}

@keyframes appear {
    to {
        opacity: 1;
    }
}

@keyframes cardHover {
    from {
        box-shadow: none;
    }
    to {
        box-shadow: 0px 0px 8px 3px #28cc40;
    }
}

@keyframes notCardHover {
    from {
        box-shadow: 0px 0px 8px 3px #28cc40;
    }
    to {
        box-shadow: none;
    }
}

